# mp2-2025-lab5-tables

./: .gitignore  CMakeLists.txt  Sample.cpp  TableAndTreeLab.sln  TableAndTreeLab.vcxproj  TableAndTreeLab.vcxproj.filters  list.cpp  list.h  mas.cpp  mas.h  polinom.cpp  polinom.h  stack.h  table.cpp  table.h  test_mas.cpp  test_polinom.cpp  test_table.cpp  test_tree.cpp  test_umas.cpp  tree.cpp  tree.h  umas.cpp  umas.h
TableAndTreeLab/Debug/: vc143.idb
TableAndTreeLab/Debug/TableAndTreeLab.tlog/: CL.command.1.tlog  TableAndTreeLab.lastbuildstate
TableAndTreeLab/x64/Debug/: TableAndTreeLab.exe.recipe  vc143.idb
TableAndTreeLab/x64/Debug/TableAndTreeLab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TableAndTreeLab.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TableAndTreeLab/x64/Release/: TableAndTreeLab.exe.recipe
TableAndTreeLab/x64/Release/TableAndTreeLab.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TableAndTreeLab.lastbuildstate
